test/cases/error/redeclare-builtin.cba
-- Built-in operators cannot be redeclared.
-- @expect-error: redeclare built-in
effect !conj : Bool * Bool ~> Bool.
infixl 5 + = !conj.
return 1
